courses/src/main/kubernetes/courses-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: courses-v1
  labels:
    name: courses-v1
    environment: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: courses
        environment: dev
        version: v1
    spec:
      containers:
      - name: courses
        image: uday1bhanu/courses:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8092
