courses/src/main/kubernetes/courses-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses
  labels:
    name: courses
    environment: dev
    app: courses
    version: v1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: courses
    environment: dev
