courses/src/main/kubernetes/courses-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: courses
  labels:
    environment: dev
    app: courses
    version: v1
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: courses.192.168.99.100.nip.io
    http:
      paths:
      - path: /departments
        backend:
          serviceName: courses
          servicePort: 80
