courses/src/main/kubernetes/courses.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses
  labels:
    app: courses
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: courses
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: courses-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: courses
        version: v1
    spec:
      containers:
      - name: courses
        image: uday1bhanu/courses:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
---
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /departments
        backend:
          serviceName: productpage
          servicePort: 9080
